--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>test2024 김다혜 포트폴리오</title>
+  <title>2024 김다혜 포트폴리오</title>
   <meta charset="utf-8">
   <!-- <script src="js/common.js"></script> -->
   <link rel="stylesheet" href="css/styles.css">
