modified:   css/styles.css 	new file:   images/arr_ico_1.svg 	new file:   images/arr_ico_2.svg 	deleted:    images/foot_arr.png 	modified:   index.html 	modified:   js/common.js

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="tit_02">
         <h2>HERE</h2>
         <p class="desc">니즈를 파악하고 가치를 창조하는<br><span>디자이너 김다혜</span>의 작업물을<br>확인하세요</p>
-        <img src="images/foot_arr.png" alt="화살표">
+        <img src="images/arr_ico_1.svg" alt="화살표">
       </div>
     </div>
 
@@ -163,7 +163,7 @@
       <div class="tit">
         <div class="tit_01">
           <h2 class="cormo point_color">THANK YOU<span>( CONTACT )</span></h2>
-          <h2>FOR WATCHING<!--<img src="images/foot_arr.png" alt="화살표">--></h2>
+          <h2>FOR WATCHING <img src="images/arr_ico_2.svg" alt="화살표"></h2>
         </div>
       </div>
   
@@ -181,5 +181,7 @@
   </footer>
 
   <div class="noise"></div>
+  <div class="cursor"></div>
+
 </body>
 </html>
