--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>2024 김다혜 포트폴리오</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script src="js/common.js"></script> -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
