modified:   index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="work_contents">
       <ul class="work_list">
         <li class="js-load">
-          <a href="#" class="img_box">
+          <a href="sub/work01.html" class="img_box">
             <div>
               <img src="images/work_thum_01.jpg" alt="">
               <span class="type cormo">Web Design</span>
