--- a/sub/work01.html
+++ b/sub/work01.html
@@ -68,8 +68,8 @@
         <p class="col">
           20년 장인 정신이 담긴 연타발에서 만든 프랜차이즈 오마이양대창<br>
           뉴트로 컨셉의 리브랜딩을 진행하면서 컨셉에 맞춰 홈페이지 또한 전면 개편했습니다.<br>
-          신문 표지 느낌의 라인을 사용하여 뉴트로 컨셉으로 오마이양대창만의 브랜드 경쟁력,<br>
-          지점별 매출 정보, 문의상담 폼 등을 메인에 노출시켜 사용자 편의성을 높였습니다.
+          신문 표지 느낌의 라인을 사용하여 뉴트로 컨셉으로 오마이양대창만의 브랜드 경쟁력, 지점별 매출 정보,<br>
+          문의상담 폼 등을 메인에 노출시켜 사용자 편의성을 높였습니다.
         </p>
       </div>
     </div>
