modified:   css/styles.css 	modified:   index.html 	modified:   sub/work01.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
   
   <!-- header -->
   <header id="header" class="clearfix">
-    <div class="hd_box_wrap">
-      <div class="hd_box">
-        <p>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span></p>
+    <a href="/">
+      <div class="hd_box_wrap">
+        <div class="hd_box">
+          <p>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span></p>
+        </div>
       </div>
-    </div>
+    </a>
 
     <ul id="nav" class="cormo">
       <li><a href="#">HOME</a></li>
@@ -170,7 +172,7 @@
       </div>
   
       <div class="contact">
-        <p>kimda_92@naver.com</p>
+        <p><a href="mailto:kimda_92@naver.com">kimda_92@naver.com</a></p>
         <p>010.2824.3968</p>
       </div>
   
