--- a/sub/work01.html
+++ b/sub/work01.html
@@ -19,15 +19,17 @@
   
   <!-- header -->
   <header id="header" class="clearfix">
-    <div class="hd_box_wrap">
-      <div class="hd_box">
-        <p>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span></p>
+    <a href="/">
+      <div class="hd_box_wrap">
+        <div class="hd_box">
+          <p>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span>2024 KIMDAHYE <span class="cormo point_color">PORTFOLIO</span><span class="dot"></span></p>
+        </div>
       </div>
-    </div>
+    </a>
 
     <ul id="nav" class="cormo">
       <li><a href="#">HOME</a></li>
-      <li><a href="#work">WORKS<span class="point_color">(8)</span></a></li>
+      <li><a href="/#work">WORKS<span class="point_color">(8)</span></a></li>
       <li><a href="#footer">CONTACT</a></li>
     </ul>
   </header>
@@ -65,7 +67,7 @@
           <dt>URL</dt>
           <dd><a href="https://bpsomydaechang.gabia.io/">오마이양대창.com</a></dd>
         </dl>
-        <p class="col">
+        <p class="col over">
           20년 장인 정신이 담긴 연타발에서 만든 프랜차이즈 오마이양대창<br>
           뉴트로 컨셉의 리브랜딩을 진행하면서 컨셉에 맞춰 홈페이지 또한 전면 개편했습니다.<br>
           신문 표지 느낌의 라인을 사용하여 뉴트로 컨셉으로 오마이양대창만의 브랜드 경쟁력, 지점별 매출 정보,<br>
@@ -116,7 +118,7 @@
         </div>
       </div>
       <div class="contact">
-        <p>kimda_92@naver.com</p>
+        <p><a href="mailto:kimda_92@naver.com">kimda_92@naver.com</a></p>
         <p>010.2824.3968</p>
       </div>
       <div class="copy cormo">
