modified:   sub/work05.html

--- a/sub/work05.html
+++ b/sub/work05.html
@@ -28,7 +28,7 @@
     </a>
 
     <ul id="nav" class="cormo">
-      <li><a href="#">HOME</a></li>
+      <li><a href="/">HOME</a></li>
       <li><a href="/#work">WORKS<span class="point_color">(8)</span></a></li>
       <li><a href="#footer">CONTACT</a></li>
     </ul>
@@ -79,12 +79,12 @@
 
   <!-- sub_img01 -->  
   <section id="sub_img01">
-    <img src="../sub/images/work01_video_01.gif" alt="오마이양대창">
+    <img src="../sub/images/work01_video_05.gif" alt="오마이양대창">
   </section>
 
   <!-- sub_img02 -->  
   <section id="sub_img02">
-    <img src="../sub/images/work01_img01.jpg" alt="오마이양대창">
+    <img src="../sub/images/work01_img05.jpg" alt="오마이양대창">
   </section>
 
   <!-- work_nav -->
