modified:   css/styles.css 	modified:   sub/work05.html

--- a/sub/work05.html
+++ b/sub/work05.html
@@ -44,7 +44,7 @@
         <p>오마이양대창 웹사이트 제작</p>
       </div>
     </div>
-    <div class="sub_vis_bg"></div>
+    <div class="sub_vis_bg sub05_vis_bg"></div>
   </section>
 
   <!-- sub_desc -->
