modified:   css/styles.css 	modified:   index.html 	new file:   sub/images/work02_img01.jpg 	new file:   sub/images/work02_img02.gif 	new file:   sub/images/work02_vis.jpg 	renamed:    sub/images/work04_img02.jpg -> sub/images/work04_img01.jpg 	new file:   sub/images/work04_vis02.gif 	renamed:    sub/images/work04_img01_bg.jpg -> sub/images/work04_vis02_bg.jpg 	renamed:    sub/images/work05_video_01.gif -> sub/images/work05_vis02.gif 	renamed:    sub/work01.html -> sub/work02.html 	new file:   sub/work04.html 	modified:   sub/work05.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="work_contents">
       <ul class="work_list">
         <li class="js-load">
-          <a href="sub/work05.html" class="img_box">
+          <a href="sub/work05.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_05.jpg" alt="">
               <span class="type cormo">Web Design</span>
