--- a/sub/work05.html
+++ b/sub/work05.html
@@ -44,7 +44,7 @@
         <p>오마이양대창 웹사이트 제작</p>
       </div>
     </div>
-    <div class="sub_vis_bg sub05_vis_bg"></div>
+    <div class="sub_vis_bg work05_vis_bg"></div>
   </section>
 
   <!-- sub_desc -->
@@ -77,15 +77,15 @@
     </div>
   </section>
 
-  <!-- sub_img01 -->  
-  <section id="sub_img01">
-    <img src="../sub/images/work01_video_05.gif" alt="오마이양대창">
-  </section>
+ <!-- work_vis02 -->  
+ <section id="work_vis02" class="work05_vis02">
+  <img src="../sub/images/work05_vis02.gif" alt="오마이양대창">
+</section>
 
-  <!-- sub_img02 -->  
-  <section id="sub_img02">
-    <img src="../sub/images/work01_img05.jpg" alt="오마이양대창">
-  </section>
+<!-- work_img -->  
+<section id="work_img">
+  <img src="../sub/images/work02_img01.jpg" alt="오마이양대창">
+</section>
 
   <!-- work_nav -->
   <section id="work_nav" class="sub01">
