modified:   index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </li>
 
         <li class="js-load">
-          <a href="#" class="img_box">
+          <a href="sub/work04.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_04.jpg" alt="">
               <span class="type cormo">Landing Page</span>
@@ -110,7 +110,7 @@
         </li>
 
         <li class="js-load">
-          <a href="#" class="img_box">
+          <a href="sub/work03.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_03.jpg" alt="">
               <span class="type cormo">Landing Page</span>
@@ -121,7 +121,7 @@
         </li>        
 
         <li class="js-load">
-          <a href="#" class="img_box">
+          <a href="sub/work02.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_02.jpg" alt="">
               <span class="type cormo">Detail Page</span>
@@ -132,7 +132,7 @@
         </li>
 
         <li class="js-load">
-          <a href="#" class="img_box">
+          <a href="sub/work01.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_01.gif" alt="">
               <span class="type cormo">SNS Design</span>
