modified:   css/styles.css 	new file:   sub/images/work01_img01.jpg 	modified:   sub/images/work02_img01.jpg 	modified:   sub/work01.html

--- a/sub/work01.html
+++ b/sub/work01.html
@@ -42,9 +42,24 @@
         <h2 class="cormo">SNS Design</h2>
         <h1>INSTAGRAM<br>CONTENTS</h1>
         <p>인스타그램 컨텐츠 디자인 모음</p>
+
+        <ul class="tabnav">
+          <li><a href="#tab01">한양화로</a></li>
+          <li><a href="#tab02">펫퍼마켓</a></li>
+        </ul>
+
       </div>
     </div>
     <!-- <div class="sub_vis_bg work02_vis_bg"></div> -->
+  </section>
+
+  <section id="work_tab">
+    
+    <div class="tabcontent">
+      <div id="tab01"><img src="../sub/images/work01_img01.jpg" alt="한양화로"></div>
+      <div id="tab02">tab2 content</div>
+    </div>
+
   </section>
 
   <!-- work_img01 -->  
