--- a/sub/work01.html
+++ b/sub/work01.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="js/common.js"></script>
+  <script src="../js/common.js"></script>
 </head>
 <body>
   
@@ -53,37 +53,32 @@
     <!-- <div class="sub_vis_bg work02_vis_bg"></div> -->
   </section>
 
-  <section id="work_tab">
-    
-    <div class="tabcontent">
-      <div id="tab01"><img src="../sub/images/work01_img01.jpg" alt="한양화로"></div>
-      <div id="tab02">tab2 content</div>
-    </div>
-
-  </section>
 
   <!-- work_img01 -->  
   <section id="work_img">
-    <img src="../sub/images/work02_img01.jpg" alt="아레브">
-    <img src="../sub/images/work02_img02.gif" alt="아레브">
+    <div class="tabcontent">
+      <div id="tab01"><img src="../sub/images/work01_img01.jpg" alt="한양화로"></div>
+      <div id="tab02"><img src="../sub/images/work01_img02.jpg" alt="펫퍼마켓"></div>
+    </div>
   </section>
+
 
   <!-- work_nav -->
   <section id="work_nav" class="sub01">
-    <a href="sub10.html" class="work_nav_prev">
+    <a href="work02.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>반올림 랜딩페이지</p>
+            <p>아레브 상세페이지</p>
         </div>
     </a>
-    <a href="sub2.html" class="work_nav_next">
+    <a href="work06.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>반올림 랜딩페이지</p>
+            <p>첫번째 포트폴리오</p>
         </div>
     </a>
   </section>
