--- a/sub/work05.html
+++ b/sub/work05.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="js/common.js"></script>
+  <script src="../js/common.js"></script>
 </head>
 <body>
   
@@ -89,15 +89,15 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="sub01">
-    <a href="sub10.html" class="work_nav_prev">
+    <a href="work06.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>반올림 랜딩페이지</p>
+            <p>첫번째 포트폴리오</p>
         </div>
     </a>
-    <a href="sub2.html" class="work_nav_next">
+    <a href="work04.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
