modified:   css/styles.css 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work04.html 	modified:   sub/work05.html

--- a/sub/work01.html
+++ b/sub/work01.html
@@ -64,7 +64,7 @@
 
 
   <!-- work_nav -->
-  <section id="work_nav" class="sub01">
+  <section id="work_nav" class="work01">
     <a href="work02.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
