--- a/sub/work02.html
+++ b/sub/work02.html
@@ -84,7 +84,7 @@
   </section>
 
   <!-- work_nav -->
-  <section id="work_nav" class="sub01">
+  <section id="work_nav" class="work02">
     <a href="work03.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
