--- a/sub/work05.html
+++ b/sub/work05.html
@@ -88,7 +88,7 @@
 </section>
 
   <!-- work_nav -->
-  <section id="work_nav" class="sub01">
+  <section id="work_nav" class="work05">
     <a href="work06.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
