modified:   sub/work03.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -44,7 +44,7 @@
         <p>반올림피자 창업 랜딩페이지 제작</p>
       </div>
     </div>
-    <div class="sub_vis_bg work04_vis_bg"></div>
+    <div class="sub_vis_bg work03_vis_bg"></div>
   </section>
 
   <!-- sub_desc -->
@@ -53,7 +53,7 @@
       <div class="row">
         <dl class="col">
           <dt>client</dt>
-          <dd>반올림피자</dd>
+          <dd>보배반점</dd>
         </dl>
         <dl class="col">
           <dt>TYPE</dt>
@@ -61,48 +61,46 @@
         </dl>
         <dl class="col">
           <dt>Date</dt>
-          <dd>2023.09</dd>
+          <dd>2023.08</dd>
         </dl>
         <dl class="col">
           <dt>URL</dt>
-          <dd><a href="http://changup.banolimpizza.com/">changup.banolimpizza.com</a></dd>
+          <dd><a href="https://bpsbobae.gabia.io/">bobaebanjum.com</a></dd>
         </dl>
         <p class="col over">
-          10년 이상 검증된 국내 피자 업계 대표 브랜드 반올림피자<br>
-          '취향 유니버스'라는 브랜드 컨셉을 바탕으로 브랜드 전속모델로 지코를 발탁하며<br>
-          다양한 창업혜택으로 예비창업자를 모집하며 브랜드 컨셉에 맞추어<br>
-          새롭게 창업 랜딩페이지를 제작하였습니다.
+          보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로 전 가맹점 평균 월 매출 1억을 달성한 NO.1 중식 브랜드입니다.
+예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고, 상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와 인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.
         </p>
       </div>
     </div>
   </section>
 
  <!-- work_vis02 -->  
- <section id="work_vis02" class="work04_vis02">
-  <img src="../sub/images/work04_vis02.gif" alt="반올림피자">
+ <section id="work_vis02" class="work03_vis02">
+  <img src="../sub/images/work03_vis02.gif" alt="반올림피자">
 </section>
 
 <!-- work_img -->  
 <section id="work_img">
-  <img src="../sub/images/work04_img01.jpg" alt="반올림피자">
+  <img src="../sub/images/work03_img01.jpg" alt="반올림피자">
 </section>
 
   <!-- work_nav -->
   <section id="work_nav" class="work04">
-    <a href="work05.html" class="work_nav_prev">
+    <a href="work02.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>오마이양대창 홈페이지</p>
+            <p>반올림 랜딩페이지</p>
         </div>
     </a>
-    <a href="work03.html" class="work_nav_next">
+    <a href="work04.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>보배반점 랜딩페이지</p>
+            <p>아레브 상세페이지</p>
         </div>
     </a>
   </section>
