modified:   sub/work03.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -40,8 +40,8 @@
     <div class="sub_wrap">
       <div class="sub_mtxt">
         <h2 class="cormo">Landing Page</h2>
-        <h1>BANOLIMPIZZA</h1>
-        <p>반올림피자 창업 랜딩페이지 제작</p>
+        <h1>BOBAEBANJUM</h1>
+        <p>보배반점 창업 랜딩페이지 제작</p>
       </div>
     </div>
     <div class="sub_vis_bg work03_vis_bg"></div>
