modified:   sub/images/work03_vis02.gif 	modified:   sub/work03.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -68,8 +68,9 @@
           <dd><a href="https://bpsbobae.gabia.io/">bobaebanjum.com</a></dd>
         </dl>
         <p class="col over">
-          보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로 전 가맹점 평균 월 매출 1억을 달성한 NO.1 중식 브랜드입니다.
-예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고, 상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와 인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.
+          보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로<br>
+          전 가맹점 평균 월 매출 1억을 달성한 NO.1 중식 브랜드입니다.<br>
+          예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고, 상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와 인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.
         </p>
       </div>
     </div>
@@ -87,7 +88,7 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work04">
-    <a href="work02.html" class="work_nav_prev">
+    <a href="work04.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
@@ -95,7 +96,7 @@
             <p>반올림 랜딩페이지</p>
         </div>
     </a>
-    <a href="work04.html" class="work_nav_next">
+    <a href="work02.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
