modified:   sub/work03.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -80,16 +80,16 @@
 
  <!-- work_vis02 -->  
  <section id="work_vis02" class="work03_vis02">
-  <img src="../sub/images/work03_vis02.gif" alt="반올림피자">
+  <img src="../sub/images/work03_vis02.gif" alt="보배반점">
 </section>
 
 <!-- work_img -->  
 <section id="work_img">
-  <img src="../sub/images/work03_img01.jpg" alt="반올림피자">
+  <img src="../sub/images/work03_img01.jpg" alt="보배반점">
 </section>
 
   <!-- work_nav -->
-  <section id="work_nav" class="work04">
+  <section id="work_nav" class="work03">
     <a href="work04.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
