new file:   sub/images/work04_img01.png 	modified:   sub/work04.html

--- a/sub/work04.html
+++ b/sub/work04.html
@@ -84,7 +84,7 @@
 
 <!-- work_img -->  
 <section id="work_img">
-  <img src="../sub/images/work04_img01.jpg" alt="반올림피자">
+  <img src="../sub/images/work04_img01.png" alt="반올림피자">
 </section>
 
   <!-- work_nav -->
