modified:   css/styles.css 	modified:   index.html 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work03.html 	modified:   sub/work04.html 	modified:   sub/work05.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script src="js/common.js"></script> -->
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
   
@@ -40,7 +41,7 @@
     <div class="sub_wrap">
       <div class="sub_mtxt">
         <h2 class="cormo">Landing Page</h2>
-        <h1>BOBAEBANJUM</h1>
+        <h1>BOBAE<br class="mo">BANJUM</h1>
         <p>보배반점 창업 랜딩페이지 제작</p>
       </div>
     </div>
@@ -68,10 +69,10 @@
           <dd><a href="https://bpsbobae.gabia.io/">bobaebanjum.com</a></dd>
         </dl>
         <p class="col over">
-          보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로<br>
+          보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로<br class="pc">
           전 가맹점 평균 월 매출 1억을 달성한 NO.1 중식 브랜드입니다.<br>
-          예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고,<br>
-          상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와<br>
+          예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고,<br class="pc">
+          상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와<br class="pc">
           인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.
         </p>
       </div>
