--- a/sub/work02.html
+++ b/sub/work02.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script src="js/common.js"></script> -->
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
   
