--- a/sub/work04.html
+++ b/sub/work04.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script src="js/common.js"></script> -->
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
   
@@ -40,7 +41,7 @@
     <div class="sub_wrap">
       <div class="sub_mtxt">
         <h2 class="cormo">Landing Page</h2>
-        <h1>BANOLIMPIZZA</h1>
+        <h1>BANOLIM<br class="mo">PIZZA</h1>
         <p>반올림피자 창업 랜딩페이지 제작</p>
       </div>
     </div>
@@ -69,8 +70,8 @@
         </dl>
         <p class="col over">
           10년 이상 검증된 국내 피자 업계 대표 브랜드 반올림피자<br>
-          '취향 유니버스'라는 브랜드 컨셉을 바탕으로 브랜드 전속모델로 지코를 발탁하며<br>
-          다양한 창업혜택으로 예비창업자를 모집하며 브랜드 컨셉에 맞추어<br>
+          '취향 유니버스'라는 브랜드 컨셉을 바탕으로 브랜드 전속모델로 지코를 발탁하며<br class="pc">
+          다양한 창업혜택으로 예비창업자를 모집하며 브랜드 컨셉에 맞추어<br class="pc">
           새롭게 창업 랜딩페이지를 제작하였습니다.
         </p>
       </div>
