--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2024 김다혜 포트폴리오</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <script src="js/common.js"></script> -->
+  <meta property="og:url" content="https://kimdahye.netlify.app/">
+  <meta property="og:title" content="2024 김다혜 포트폴리오">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="images/ogimg.jpg">
+  <meta property="og:description" content="디자이너 김다혜 포트폴리오를 확인해보세요">
+  <title>2024 김다혜 포트폴리오</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
@@ -12,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-
+  <link rel="icon" href="images/favicon.ico">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="js/common.js"></script>
 </head>
