--- a/sub/work03.html
+++ b/sub/work03.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>보배반점</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <script src="js/common.js"></script> -->
+  <title>보배반점</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
@@ -12,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-
+  <link rel="icon" href="images/favicon.ico">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="../js/common.js"></script>
 </head>
