--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:url" content="https://kimdahye.netlify.app/">
-  <meta property="og:title" content="2024 김다혜 포트폴리오">
+  <meta property="og:title" content="DESIGNER.Kim dahye">
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/ogimg.jpg">
-  <meta property="og:description" content="디자이너 김다혜 포트폴리오를 확인해보세요">
+  <meta property="og:description" content="디자이너 김다혜 2024 포트폴리오를 확인해보세요">
   <title>2024 김다혜 포트폴리오</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
