--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/ogimg.jpg">
   <meta property="og:description" content="디자이너 김다혜 2024 포트폴리오를 확인해보세요">
-  <title>2024 김다혜 포트폴리오</title>
+  <title>김다혜 포트폴리오</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
