--- a/sub/work05.html
+++ b/sub/work05.html
@@ -89,12 +89,12 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work05">
-    <a href="work06.html" class="work_nav_prev">
+    <a href="work01.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>첫번째 포트폴리오</p>
+            <p>sns 컨텐츠</p>
         </div>
     </a>
     <a href="work04.html" class="work_nav_next">
