--- a/sub/work05_bak(241106).html
+++ b/sub/work05_bak(241106).html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SNS Design</title>
+  <title>오마이양대창</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css">
@@ -39,46 +39,70 @@
   <section id="sub_vis">
     <div class="sub_wrap">
       <div class="sub_mtxt">
-        <h2 class="cormo">SNS Design</h2>
-        <h1>INSTAGRAM<br>CONTENTS</h1>
-        <p>인스타그램 컨텐츠 디자인 모음</p>
-
-        <ul class="tabnav">
-          <li><a href="#tab01">한양화로</a></li>
-          <li><a href="#tab02">펫퍼마켓</a></li>
-        </ul>
-
+        <h2 class="cormo">Web Design</h2>
+        <h1>OH MY<br>YANG DAE CHANG</h1>
+        <p>오마이양대창 웹사이트 제작</p>
       </div>
     </div>
-    <!-- <div class="sub_vis_bg work02_vis_bg"></div> -->
+    <div class="sub_vis_bg work05_vis_bg"></div>
   </section>
 
-
-  <!-- work_img01 -->  
-  <section id="work_img">
-    <div class="tabcontent">
-      <div id="tab01"><img src="../sub/images/work01_img01.jpg" alt="한양화로"></div>
-      <div id="tab02"><img src="../sub/images/work01_img02.jpg" alt="펫퍼마켓"></div>
+  <!-- sub_desc -->
+  <section id="sub_desc">
+    <div class="sub_wrap">
+      <div class="row">
+        <dl class="col">
+          <dt>client</dt>
+          <dd>오마이양대창</dd>
+        </dl>
+        <dl class="col">
+          <dt>TYPE</dt>
+          <dd>Responsive Web</dd>
+        </dl>
+        <dl class="col">
+          <dt>Date</dt>
+          <dd>2023.05</dd>
+        </dl>
+        <dl class="col">
+          <dt>URL</dt>
+          <dd><a href="https://bpsomydaechang.gabia.io/">오마이양대창.com</a></dd>
+        </dl>
+        <p class="col over">
+          20년 장인 정신이 담긴 연타발에서 만든 프랜차이즈 오마이양대창<br>
+          뉴트로 컨셉의 리브랜딩을 진행하면서 컨셉에 맞춰 홈페이지 또한 전면 개편했습니다.<br>
+          신문 표지 느낌의 라인을 사용하여 뉴트로 컨셉으로 오마이양대창만의 브랜드 경쟁력, 지점별 매출 정보, <br class="pc">
+          문의상담 폼 등을 메인에 노출시켜 사용자 편의성을 높였습니다.
+        </p>
+      </div>
     </div>
   </section>
 
+ <!-- work_vis02 -->  
+ <section id="work_vis02" class="work05_vis02">
+  <img src="../sub/images/work05_vis02.gif" alt="오마이양대창">
+</section>
+
+<!-- work_img -->  
+<section id="work_img">
+  <img src="../sub/images/work05_img01.jpg" alt="오마이양대창">
+</section>
 
   <!-- work_nav -->
-  <section id="work_nav" class="work01">
-    <a href="work02.html" class="work_nav_prev">
+  <section id="work_nav" class="work05">
+    <a href="work06.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>아레브 상세페이지</p>
+            <p>첫번째 포트폴리오</p>
         </div>
     </a>
-    <a href="work05.html" class="work_nav_next">
+    <a href="work04.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>오마이양대창 홈페이지</p>
+            <p>반올림 랜딩페이지</p>
         </div>
     </a>
   </section>
