--- a/sub/work01.html
+++ b/sub/work01.html
@@ -73,12 +73,12 @@
             <p>아레브 상세페이지</p>
         </div>
     </a>
-    <a href="work05.html" class="work_nav_next">
+    <a href="work06.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>오마이양대창 홈페이지</p>
+            <p>첫번째 포트폴리오</p>
         </div>
     </a>
   </section>
