modified:   index.html 	modified:   sub/work06.html

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
     <div id="work_contents">
       <ul class="work_list">
         <li class="js-load">
+          <a href="sub/work06.html" target="_blank" class="img_box">
+            <div>
+              <img src="images/work_thum_06.jpg" alt="">
+              <span class="type cormo">UX/UI Design</span>
+              <span class="year">2024</span>
+            </div>
+          </a>
+          <p class="tit">뮤인비</p>
+        </li>
+
+        <li class="js-load">
           <a href="sub/work05.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_05.jpg" alt="">
