modified:   sub/images/work06_img01.png 	modified:   sub/images/work06_img03.png 	modified:   sub/work06.html

--- a/sub/work06.html
+++ b/sub/work06.html
@@ -86,9 +86,9 @@
   <img src="../sub/images/work06_img01.png" alt="뮤인비">
 
   <div>
-    <video height="180" width="288" controls loop>
+    <video height="auto" width="100%"  loop muted autoplay playsinline>
       <source src="../sub/images/work06_img02.mp4" type="video/mp4" ></source>
-      <source src="../sub/images/work06_img02.mp4" type="video/ogg" ></source>
+      <source src="../sub/images/work06_img02.mp4" type="video/ogg"></source>
     </video>
   </div>
 
