modified:   css/styles.css 	new file:   images/ico_arrow-btn.svg 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work03.html 	modified:   sub/work04.html 	modified:   sub/work05.html 	modified:   sub/work06.html

--- a/sub/work01.html
+++ b/sub/work01.html
@@ -78,7 +78,7 @@
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>첫번째 포트폴리오</p>
+            <p>뮤인비 UX/UI</p>
         </div>
     </a>
   </section>
