--- a/sub/work02.html
+++ b/sub/work02.html
@@ -64,8 +64,8 @@
           <dd>2023</dd>
         </dl>
         <dl class="col">
-          <dt>URL</dt>
-          <dd>-</dd>
+          <dt>Contribution</dt>
+          <dd>100%</dd>
         </dl>
         <p class="col over">
           모두의 일상이 한결 편안할 수 있도록 여러분의 숨결에 아름다움을 선사하는 아레브<br>
