--- a/sub/work03.html
+++ b/sub/work03.html
@@ -64,15 +64,18 @@
           <dd>2023.08</dd>
         </dl>
         <dl class="col">
-          <dt>URL</dt>  
-          <dd><a href="https://bpsbobae.gabia.io/">bobaebanjum.com</a></dd>
+          <dt>Contribution</dt>
+          <dd>100%</dd>
         </dl>
         <p class="col over">
           보배반점은 7,200시간의 불 맛 연구 기간과 20년의 노하우, 차별화된 인테리어로<br class="pc">
           전 가맹점 평균 월 매출 1억을 달성한 NO.1 중식 브랜드입니다.<br>
           예비 창업자에게 강렬한 인상을 주기 위해 비주얼에 전국 매장 누적 매출을 노출시키고,<br class="pc">
           상단에 브랜드 강점, 창업혜택 등 배치하여 이탈률을 낮추고, 브랜드 컬러와<br class="pc">
-          인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.
+          인테리어 네온사인을 적절히 사용하여 보배반점만의 창업 랜딩페이지를 제작하였습니다.<br>
+          <span class="btn">
+            <a href="https://bpsbobae.gabia.io/"><b>WEBSITE LINK</b><img src="../images/ico_arrow-btn.svg"></a>
+          </span>
         </p>
       </div>
     </div>
