--- a/sub/work04.html
+++ b/sub/work04.html
@@ -64,14 +64,18 @@
           <dd>2023.09</dd>
         </dl>
         <dl class="col">
-          <dt>URL</dt>
-          <dd><a href="http://changup.banolimpizza.com/">changup.banolimpizza.com</a></dd>
+          <dt>Contribution</dt>
+          <dd>100%</dd>
         </dl>
         <p class="col over">
           10년 이상 검증된 국내 피자 업계 대표 브랜드 반올림피자<br>
           '취향 유니버스'라는 브랜드 컨셉을 바탕으로 브랜드 전속모델로 지코를 발탁하며<br class="pc">
           다양한 창업혜택으로 예비창업자를 모집하며 브랜드 컨셉에 맞추어<br class="pc">
-          새롭게 창업 랜딩페이지를 제작하였습니다.
+          새롭게 창업 랜딩페이지를 제작하였습니다.<br>
+
+          <span class="btn">
+            <a href="http://changup.banolimpizza.com/"><b>WEBSITE LINK</b><img src="../images/ico_arrow-btn.svg"></a>
+          </span>
         </p>
       </div>
     </div>
