--- a/sub/work06.html
+++ b/sub/work06.html
@@ -44,11 +44,10 @@
         <p>뮤인비 앱 디자인</p>
       </div>
     </div>
-    <!-- <div class="sub_vis_bg work04_vis_bg"></div> -->
   </section>
 
   <!-- sub_desc -->
-  <section id="sub_desc">
+  <section id="sub_desc" class="work06">
     <div class="sub_wrap">
       <div class="row">
         <dl class="col">
@@ -76,17 +75,12 @@
     </div>
   </section>
 
- <!-- work_vis02 -->  
- <!-- <section id="work_vis02" class="work04_vis02">
-  <img src="../sub/images/work06_img01.png" alt="뮤인비">
-</section> -->
-
 <!-- work_img -->  
 <section id="work_img">
   <img src="../sub/images/work06_img01.png" alt="뮤인비">
 
   <div>
-    <video height="auto" width="100%"  loop muted autoplay playsinline>
+    <video height="auto" width="100%" loop muted autoplay playsinline>
       <source src="../sub/images/work06_img02.mp4" type="video/mp4" ></source>
       <source src="../sub/images/work06_img02.mp4" type="video/ogg"></source>
     </video>
@@ -96,21 +90,21 @@
 </section>
 
   <!-- work_nav -->
-  <section id="work_nav" class="work04">
-    <a href="work05.html" class="work_nav_prev">
+  <section id="work_nav" class="work06">
+    <a href="work01.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>오마이양대창 홈페이지</p>
+            <p>sns 컨텐츠</p>
         </div>
     </a>
-    <a href="work03.html" class="work_nav_next">
+    <a href="work05.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>보배반점 랜딩페이지</p>
+            <p>오마이양대창 홈페이지</p>
         </div>
     </a>
   </section>
