--- a/sub/work05.html
+++ b/sub/work05.html
@@ -64,14 +64,17 @@
           <dd>2023.05</dd>
         </dl>
         <dl class="col">
-          <dt>URL</dt>
-          <dd><a href="https://bpsomydaechang.gabia.io/">오마이양대창.com</a></dd>
+          <dt>Contribution</dt>
+          <dd>100%</dd>
         </dl>
         <p class="col over">
           20년 장인 정신이 담긴 연타발에서 만든 프랜차이즈 오마이양대창<br>
           뉴트로 컨셉의 리브랜딩을 진행하면서 컨셉에 맞춰 홈페이지 또한 전면 개편했습니다.<br>
           신문 표지 느낌의 라인을 사용하여 뉴트로 컨셉으로 오마이양대창만의 브랜드 경쟁력, 지점별 매출 정보, <br class="pc">
-          문의상담 폼 등을 메인에 노출시켜 사용자 편의성을 높였습니다.
+          문의상담 폼 등을 메인에 노출시켜 사용자 편의성을 높였습니다.<br>
+          <span class="btn">
+            <a href="https://bpsomydaechang.gabia.io/"><b>WEBSITE LINK</b><img src="../images/ico_arrow-btn.svg"></a>
+          </span>
         </p>
       </div>
     </div>
@@ -94,7 +97,7 @@
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>첫번째 포트폴리오</p>
+            <p>뮤인비 UX/UI</p>
         </div>
     </a>
     <a href="work04.html" class="work_nav_next">
