modified:   css/styles.css 	modified:   index.html 	modified:   sub/work05.html

--- a/sub/work05.html
+++ b/sub/work05.html
@@ -57,7 +57,7 @@
         </dl>
         <dl class="col">
           <dt>TYPE</dt>
-          <dd>Responsive Web</dd>
+          <dd>Responsive</dd>
         </dl>
         <dl class="col">
           <dt>Date</dt>
