--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           <a href="sub/work06.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_06.jpg" alt="">
-              <span class="type cormo">UX/UI</span>
-              <span class="year cormo">APP</span>
+              <span class="type">UX/UI</span>
+              <span class="year">APP</span>
             </div>
           </a>
           <p class="tit">뮤인비</p>
@@ -107,8 +107,8 @@
           <a href="sub/work05.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_05.jpg" alt="">
-              <span class="type cormo">WEB</span>
-              <span class="year cormo">Responsive</span>
+              <span class="type">Web</span>
+              <span class="year">Responsive</span>
             </div>
           </a>
           <p class="tit">오마이양대창</p>
@@ -118,8 +118,8 @@
           <a href="sub/work04.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_04.jpg" alt="">
-              <span class="type cormo">LANDING</span>
-              <span class="year cormo">Responsive</span>
+              <span class="type">Landing</span>
+              <span class="year">Responsive</span>
             </div>
           </a>
           <p class="tit">반올림피자</p>
@@ -129,8 +129,8 @@
           <a href="sub/work03.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_03.jpg" alt="">
-              <span class="type cormo">LANDING</span>
-              <span class="year cormo">Responsive</span>
+              <span class="type">Landing</span>
+              <span class="year">Responsive</span>
             </div>
           </a>
           <p class="tit">보배반점</p>
@@ -140,8 +140,8 @@
           <a href="sub/work02.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_02.jpg" alt="">
-              <span class="type cormo">Detail Page</span>
-              <span class="year cormo">Design</span>
+              <span class="type">Detail Page</span>
+              <span class="year">Design</span>
             </div>
           </a>
           <p class="tit">areb</p>
@@ -151,8 +151,8 @@
           <a href="sub/work01.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_01.gif" alt="">
-              <span class="type cormo">SNS</span>
-              <span class="year cormo">Contents</span>
+              <span class="type">SNS</span>
+              <span class="year">Contents</span>
             </div>
           </a>
           <p class="tit">SNS 컨텐츠</p>
