modified:   sub/work04.html

--- a/sub/work04.html
+++ b/sub/work04.html
@@ -74,7 +74,7 @@
           새롭게 창업 랜딩페이지를 제작하였습니다.<br>
 
           <span class="btn">
-            <a href="http://changup.banolimpizza.com/"><b>WEBSITE LINK</b><img src="../images/ico_arrow-btn.svg"></a>
+            <a href="https://bpsbanolim.gabia.io/"><b>WEBSITE LINK</b><img src="../images/ico_arrow-btn.svg"></a>
           </span>
         </p>
       </div>
