modified:   sub/work06.html

--- a/sub/work06.html
+++ b/sub/work06.html
@@ -87,6 +87,15 @@
   </div>
 
   <img src="../sub/images/work06_img03.png" alt="뮤인비">
+
+  <div>
+    <video height="auto" width="100%" loop muted autoplay playsinline>
+      <source src="../sub/images/work06_img04.mp4" type="video/mp4" ></source>
+      <source src="../sub/images/work06_img04.mp4" type="video/ogg"></source>
+    </video>
+  </div>
+
+  <img src="../sub/images/work06_img05.png" alt="뮤인비">
 </section>
 
   <!-- work_nav -->
