modified:   css/reset.css 	modified:   css/styles.css 	modified:   index.html 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work03.html 	modified:   sub/work04.html 	modified:   sub/work05.html 	modified:   sub/work06.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="mtxt_wrap">
       <div class="mtxt">
         <div class="mtxt_01">
-          <h2 class="cormo">DESIGNER</h2>
+          <h2 class="cormo"><span class="cormo">DESIGNER</span></h2>
           <p class="point_box"><span class="cormo">Hello!</span> I'm Kim dahye</p>
         </div>
         <div class="mtxt_02">
@@ -172,7 +172,7 @@
       <div class="tit">
         <div class="tit_01">
           <h2 class="cormo point_color">THANK YOU<span>( CONTACT )</span></h2>
-          <h2>FOR WATCHING <img src="images/arr_ico_2.svg" alt="화살표"></h2>
+          <h2>FOR WATCHING<img src="images/arr_ico_2.svg" alt="화살표"></h2>
         </div>
       </div>
   
