deleted:    sub/images/work03_img01.jpg 	new file:   sub/images/work03_img01.png 	modified:   sub/work03.html

--- a/sub/work03.html
+++ b/sub/work03.html
@@ -88,7 +88,7 @@
 
 <!-- work_img -->  
 <section id="work_img">
-  <img src="../sub/images/work03_img01.jpg" alt="보배반점">
+  <img src="../sub/images/work03_img01.png" alt="보배반점">
 </section>
 
   <!-- work_nav -->
