modified:   index.html 	modified:   js/common.js 	modified:   css/styles.css

--- a/index.html
+++ b/index.html
@@ -159,10 +159,9 @@
         </li>
 
       </ul>
-      <div class="more_btn">
+      <!-- <div class="more_btn">
         <a href="javascript:;" class="moreBtn cormo">+ MORE</a>
-        <!-- <button type="button" class="moreBtn cormo">+ MORE</button> -->
-      </div>
+      </div> -->
     </div>
   </section>
 
