--- a/sub/work02.html
+++ b/sub/work02.html
@@ -81,7 +81,8 @@
   <section id="work_img">
     <img src="../sub/images/work02_img01.jpg" alt="아레브">
     <img src="../sub/images/work02_img02.gif" alt="아레브">
-    <img src="../sub/images/work02_img03.jpg" alt="아레브">
+    <img src="../sub/images/work02_img03.gif" alt="아레브">
+    <img src="../sub/images/work02_img04.jpg" alt="아레브">
   </section>
 
   <!-- work_nav -->
