modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
       <div class="mtxt">
         <div class="mtxt_01">
           <h2 class="cormo"><span class="cormo">DESIGNER</span></h2>
-          <p class="point_box"><span class="cormo">Hello!</span> I'm Kim dahye</p>
+          <div class="point_box">
+            <video height="auto" width="100%" loop muted autoplay playsinline>
+              <source src="images/tit_img.mp4" type="video/mp4" ></source>
+              <source src="images/tit_img.mp4" type="video/ogg"></source>
+            </video>
+          </div>
         </div>
         <div class="mtxt_02">
           <h2>WHO IDENTIFY</h2>
