modified:   css/styles.css 	modified:   js/common.js 	modified:   sub/images/work02_img01.jpg 	modified:   sub/images/work02_img04.jpg 	new file:   sub/images/work02_img05.jpg 	new file:   sub/images/work02_vis01.png 	new file:   sub/images/work02_vis02.png 	new file:   sub/images/work02_vis03.png 	new file:   sub/images/work02_vis04.png 	new file:   sub/images/work02_vis05.png 	modified:   sub/work02.html 	new file:   sub/work02_bak(250213).html

--- a/sub/work02_bak(250213).html
+++ b/sub/work02_bak(250213).html
@@ -69,9 +69,9 @@
         </dl>
         <p class="col over">
           모두의 일상이 한결 편안할 수 있도록 여러분의 숨결에 아름다움을 선사하는 아레브<br>
-          아레브가 추구하는 브랜드 감성을 담아 넓은 그리드로 시원핟고 직관적인 디자인의 공식몰과과<br>
+          자체 보유한 원적외선 뉴이온 인베스팅 기술로 제작된 아레브 마스크로<br>
           고급스러운 컨셉의 KF94 베리어프로 라인과 8가지 컬러 타입의 센스핏 라인 2가지 타입의<br>
-          상세페이지와 프로모션을 디자인하였습니다.
+          상세페이지를 각각의 컨셉에 맞춰 제작하엿습니다.
         </p>
       </div>
     </div>
@@ -79,30 +79,6 @@
   
   <!-- work_img01 -->  
   <section id="work_img">
-    <img src="../sub/images/work02_img05.jpg" alt="아레브">
-
-    <div class="work02_wrap">
-      <div class="work02_roller">
-        <ul class="work02_rolling_list">
-          <li class="item">
-            <span><img src="../sub/images/work02_vis05.png" alt="아레브"></span>
-          </li>
-          <li class="item">
-            <span><img src="../sub/images/work02_vis04.png" alt="아레브"></span>
-          </li>
-          <li class="item">
-            <span><img src="../sub/images/work02_vis03.png" alt="아레브"></span>
-          </li>
-          <li class="item">
-            <span><img src="../sub/images/work02_vis02.png" alt="아레브"></span>
-          </li>
-          <li class="item">
-            <span><img src="../sub/images/work02_vis01.png" alt="아레브"></span>
-          </li>
-        </ul>
-      </div>
-    </div>
-
     <img src="../sub/images/work02_img01.jpg" alt="아레브">
     <img src="../sub/images/work02_img02.gif" alt="아레브">
     <img src="../sub/images/work02_img03.gif" alt="아레브">
