modified:   css/styles.css 	modified:   index.html 	modified:   sub/work02.html

--- a/sub/work02.html
+++ b/sub/work02.html
@@ -39,9 +39,9 @@
   <section id="sub_vis">
     <div class="sub_wrap">
       <div class="sub_mtxt">
-        <h2 class="cormo">Detail Page</h2>
+        <h2 class="cormo">commerce · Detail Page</h2>
         <h1>areb</h1>
-        <p>아레브 상세페이지 제작</p>
+        <p>아레브 공식몰·상세페이지·프로모션</p>
       </div>
     </div>
     <div class="sub_vis_bg work02_vis_bg"></div>
@@ -57,7 +57,7 @@
         </dl>
         <dl class="col">
           <dt>TYPE</dt>
-          <dd>Detail Page</dd>
+          <dd>Commerce · Detail Page</dd>
         </dl>
         <dl class="col">
           <dt>Date</dt>
@@ -69,7 +69,7 @@
         </dl>
         <p class="col over">
           모두의 일상이 한결 편안할 수 있도록 여러분의 숨결에 아름다움을 선사하는 아레브<br>
-          아레브가 추구하는 브랜드 감성을 담아 넓은 그리드로 시원핟고 직관적인 디자인의 공식몰과과<br>
+          아레브가 추구하는 브랜드 감성을 담아 넓은 그리드로 시원하고 직관적인 디자인의 공식몰과<br>
           고급스러운 컨셉의 KF94 베리어프로 라인과 8가지 컬러 타입의 센스핏 라인 2가지 타입의<br>
           상세페이지와 프로모션을 디자인하였습니다.
         </p>
