--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
         </li>
 
         <li class="js-load" data-aos="fade-up">
+          <a href="sub/work02.html" target="_blank" class="img_box">
+            <div>
+              <img src="images/work_thum_02.jpg" alt="">
+              <span class="type">Commerce · Detail Page</span>
+              <span class="year">Design</span>
+            </div>
+          </a>
+          <p class="tit">areb</p>
+        </li>
+
+        <li class="js-load" data-aos="fade-up">
           <a href="sub/work05.html" target="_blank" class="img_box">
             <div>
               <img src="images/work_thum_05.jpg" alt="">
@@ -152,17 +163,6 @@
           </a>
           <p class="tit">보배반점</p>
         </li>        
-
-        <li class="js-load" data-aos="fade-up">
-          <a href="sub/work02.html" target="_blank" class="img_box">
-            <div>
-              <img src="images/work_thum_02.jpg" alt="">
-              <span class="type">Detail Page</span>
-              <span class="year">Design</span>
-            </div>
-          </a>
-          <p class="tit">areb</p>
-        </li>
 
         <li class="js-load" data-aos="fade-up">
           <a href="sub/work01.html" target="_blank" class="img_box">
