modified:   css/styles.css 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work03.html 	modified:   sub/work04.html 	modified:   sub/work06.html

--- a/sub/work01.html
+++ b/sub/work01.html
@@ -65,21 +65,21 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work01">
-    <a href="work02.html" class="work_nav_prev">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">prev work</h3>
-            <p>아레브 상세페이지</p>
-        </div>
+    <a href="work03.html" class="work_nav_next">
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">next work</h3>
+          <p>보배반점 랜딩페이지</p>
+      </div>
     </a>
     <a href="work06.html" class="work_nav_next">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">next work</h3>
-            <p>뮤인비 UX/UI</p>
-        </div>
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">next work</h3>
+          <p>뮤인비 UX/UI</p>
+      </div>
     </a>
   </section>
 
