--- a/sub/work06.html
+++ b/sub/work06.html
@@ -108,13 +108,13 @@
             <p>sns 컨텐츠</p>
         </div>
     </a>
-    <a href="work05.html" class="work_nav_next">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">next work</h3>
-            <p>오마이양대창 홈페이지</p>
-        </div>
+    <a href="work02.html" class="work_nav_prev">
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">prev work</h3>
+          <p>아레브 디자인</p>
+      </div>
     </a>
   </section>
 
