--- a/sub/work02.html
+++ b/sub/work02.html
@@ -111,21 +111,21 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work02">
-    <a href="work03.html" class="work_nav_prev">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">prev work</h3>
-            <p>보배반점 랜딩페이지</p>
-        </div>
+    <a href="work06.html" class="work_nav_prev">
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">prev work</h3>
+          <p>뮤인비 UX/UI</p>
+      </div>
     </a>
-    <a href="work01.html" class="work_nav_next">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">next work</h3>
-            <p>sns 컨텐츠</p>
-        </div>
+    <a href="work05.html" class="work_nav_prev">
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">prev work</h3>
+          <p>오마이양대창 홈페이지</p>
+      </div>
     </a>
   </section>
 
