--- a/sub/work03.html
+++ b/sub/work03.html
@@ -94,21 +94,21 @@
   <!-- work_nav -->
   <section id="work_nav" class="work03">
     <a href="work04.html" class="work_nav_prev">
-        <div class="bg_wrap"></div>
-        <div class="bg_color"></div>
-        <div class="work_nav_info">
-            <h3 class="cormo">prev work</h3>
-            <p>반올림 랜딩페이지</p>
-        </div>
+      <div class="bg_wrap"></div>
+      <div class="bg_color"></div>
+      <div class="work_nav_info">
+          <h3 class="cormo">prev work</h3>
+          <p>반올림 랜딩페이지</p>
+      </div>
     </a>
-    <a href="work02.html" class="work_nav_next">
+    <a href="work01.html" class="work_nav_next">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">next work</h3>
-            <p>아레브 상세페이지</p>
+            <p>sns 컨텐츠</p>
         </div>
-    </a>
+      </a>
   </section>
 
  
