modified:   css/styles.css 	modified:   sub/work01.html 	modified:   sub/work02.html 	modified:   sub/work05.html 	modified:   sub/work06.html

--- a/sub/work01.html
+++ b/sub/work01.html
@@ -65,7 +65,7 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work01">
-    <a href="work03.html" class="work_nav_next">
+    <a href="work03.html" class="work_nav_prev">
       <div class="bg_wrap"></div>
       <div class="bg_color"></div>
       <div class="work_nav_info">
