--- a/sub/work02.html
+++ b/sub/work02.html
@@ -119,7 +119,7 @@
           <p>뮤인비 UX/UI</p>
       </div>
     </a>
-    <a href="work05.html" class="work_nav_prev">
+    <a href="work05.html" class="work_nav_next">
       <div class="bg_wrap"></div>
       <div class="bg_color"></div>
       <div class="work_nav_info">
