--- a/sub/work05.html
+++ b/sub/work05.html
@@ -92,12 +92,12 @@
 
   <!-- work_nav -->
   <section id="work_nav" class="work05">
-    <a href="work06.html" class="work_nav_prev">
+    <a href="work02.html" class="work_nav_prev">
         <div class="bg_wrap"></div>
         <div class="bg_color"></div>
         <div class="work_nav_info">
             <h3 class="cormo">prev work</h3>
-            <p>뮤인비 UX/UI</p>
+            <p>아레브 공식몰 · 상세페이지</p>
         </div>
     </a>
     <a href="work04.html" class="work_nav_next">
