--- a/sub/work06.html
+++ b/sub/work06.html
@@ -108,7 +108,7 @@
             <p>sns 컨텐츠</p>
         </div>
     </a>
-    <a href="work02.html" class="work_nav_prev">
+    <a href="work02.html" class="work_nav_next">
       <div class="bg_wrap"></div>
       <div class="bg_color"></div>
       <div class="work_nav_info">
